# Quarter_3_Assignments

./: .gitignore  Microservices.ipynb  README.md
.ipynb_checkpoints/: Microservices-checkpoint.ipynb
Assignment2/: Async Rust.md
Assignment3/: differences.md
Iot class 4/class-04/src/: main.rs
Iot_classes/: file.html
Iot_classes/class-07/: Cargo.toml  Rocket.toml
Iot_classes/class-07/src/: main.rs
Iot_classes/class-08/: Cargo.toml  Rocket.toml
Iot_classes/class-08/src/: index.html  main.rs
Iot_classes/class-09/: Cargo.toml
Iot_classes/class-09/src/: main.rs
Iot_classes/class-10/: Cargo.toml
Iot_classes/class-10/src/: main.rs
